--- a/.github/workflows/fetch-api-data.yml
+++ b/.github/workflows/fetch-api-data.yml
@@ -6,6 +6,9 @@ on:
     - cron: "*/30 * * * *"
   workflow_dispatch: # Allow manual triggering
 
+permissions:
+  contents: write
+
 jobs:
   fetch-data:
     strategy:
