--- a/.github/workflows/fetch-single-api.yml
+++ b/.github/workflows/fetch-single-api.yml
@@ -16,6 +16,9 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: write
+
 jobs:
   fetch-single-api:
     runs-on: ubuntu-latest
