--- a/.github/workflows/fetch-single-api.yml
+++ b/.github/workflows/fetch-single-api.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Fetch ${{ inputs.data_name }} data
         run: |
           echo "Fetching ${{ inputs.data_name }} from ${{ inputs.api_url }}?updatedAt=${{ steps.timestamp.outputs.timestamp }}"
-          curl -s "${{ inputs.api_url }}?updatedAt=${{ steps.timestamp.outputs.timestamp }}" > ${{ inputs.output_file }}
+          curl -s "${{ inputs.api_url }}?updatedAt=${{ steps.timestamp.outputs.timestamp }}" | jq '.' > ${{ inputs.output_file }}
 
       - name: Check for changes in ${{ inputs.output_file }}
         id: changes
